tests/error/errors_on_usage/var_in_modifier3.err
Error: Variable not defined (at $FILE:20:11)
   | 
18 |     measure(q)
19 | 
20 |     return a
   |            ^ `a` is not defined

Help:
   | 
15 |             if b:
16 |                 a = 4
   |                 ----- a is defined inside a modifier block, but variable defined
   |                       in a modifier block are not available outside of it

Guppy compilation failed due to 1 previous error
